--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark" id="htmlTag">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tailwind | Project</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1 class="text-red-500">rakibul islam</h1>
+<body class="bg-white dark:bg-gray-900">
+  <header class="py-2 px-2 md:px-5 bg-white flex justify-between dark:bg-black">
+    <!-- header first -->
+     <div class="md:w-32 w-20">
+      <img class="dark:bg-white p-1 rounded-md" src="./image/c4u full logo_2022 1.png" alt="">
+     </div>
+     <!-- nav second -->
+
+     <nav class="hidden md:flex items-center">
+      <ul class="flex gap-5 flex-none dark:text-white cursor-pointer">
+        <li>Home</li>
+        <li>About Us</li>
+        <li class="text-[#F44335]">Upskill</li>
+        <li>Contactus</li>
+      </ul>
+     </nav>
+
+     <!-- button and heder last -->
+      <div class="flex gap-2 md:gap-4 items-center">
+        <button class="bg-[#F44335] text-white px-2 py-1 rounded-md hover:transition-all hover:scale-x-105">Register Interest</button>
+        <button class="hover:scale-105 transition-all" id="darks">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+            class="size-7 dark:stroke-white">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+          </svg>
+        </button>
+
+      </div>
+  </header>
+
+
+
+
+  <script>
+   const htmltag = document.getElementById("htmlTag");
+   const change = document.getElementById("darks");
+
+   change.addEventListener("click", function(){
+    htmltag.classList.toggle("dark");
+   });
+
+  </script>
   
 </body>
 </html>
