hero section complet

--- a/index.html
+++ b/index.html
@@ -36,6 +36,93 @@
 
       </div>
   </header>
+  <!-- headeer end -->
+
+  <!-- hero section start -->
+
+  <!-- this is a main section -->
+  <section class="grid grid-cols-12 py-14 md:py-20 px-5 md:px-10 dark:bg-gray-900 bg-[#FAFAFA]">
+    <!-- left section -->
+  
+    <section class="md:col-span-6 col-span-12">
+      <!-- first -->
+      <p class="dark:text-white text-sm md:text-lg">Discover <span class="text-[#F44335]">-</span> Interact <span class="text-[#F44335]">-</span> Engage</p>
+      <!-- second -->
+       <h1 class="text-4xl font-bold pt-4 md:text-5xl dark:text-white">Google <br>
+      <span class="text-[#F44335] underline ">IT Support</span> <br>Certificate</h1>
+      <!-- third -->
+      <p class="text-sm pt-5 dark:text-white md:pt-10">This is your path to a career in IT. In this program, you’ll learn in-demand skills with no degree or experience
+      required.</p>
+
+      <!-- four -->
+
+      <div class="flex pt-6 md:pt-10 gap-5 md:gap-10">
+        <!-- div1 -->
+         <div class="flex flex-col justify-center items-center">
+          <p class="text-[#00FF84] text-xl">438</p>
+          <p class="text-sm dark:text-white">videos</p>
+         </div>
+
+         <!-- div2 -->
+
+        <div class="flex flex-col justify-center items-center">
+          <p class="text-[#00FF84] text-xl">151</p>
+          <p class="text-sm dark:text-white">Readings</p>
+        </div>
+
+        <!-- div3 -->
+
+        <div class="flex flex-col justify-center items-center">
+          <p class="text-[#00FF84] text-xl">108</p>
+          <p class="text-sm dark:text-white">Quizzes</p>
+        </div>
+
+        <!-- div4 -->
+
+        <div class="flex flex-col justify-center items-center">
+          <p class="text-[#00FF84] text-xl">24</p>
+          <p class="text-sm dark:text-white">Exercises</p>
+        </div>
+
+        <!-- div5 -->
+
+        <div class="flex flex-col justify-center items-center">
+          <p class="text-[#00FF84] text-xl">4</p>
+          <p class="text-sm dark:text-white">Assigments</p>
+        </div>
+
+      </div>
+
+      <!-- five -->
+
+      <div class="pt-5 md:pt-10 gap-5">
+        <button class="bg-[#F44335] p-1 px-3 rounded-md text-white mr-3 shadow-md hover:scale-105">Sign up</button>
+        <button class="dark:text-white border rounded-md px-3 p-1 hover:scale-110 shadow-md">Learn more</button>
+      </div>
+
+    </section>
+
+    <!-- right section -->
+     <section class="md:col-span-6 col-span-12">
+
+     <div class="relative">
+        <img class="md:rounded-full md:ml-5 md:w-96 mt-3 rounded-md"
+          src="./image/university-students-using-laptops-and-digital-tabl-2022-03-07-23-57-44-utc 1.png" alt="">
+          <div class="absolute bottom-[-45px] left-0 ml-24 hidden md:flex">
+            <img src="./image/Vector 1.png" alt="">
+          </div>
+          <div class="absolute top-[-30px] right-[-15px] hidden md:flex">
+            <img src="./image/Vector 2.png" alt="">
+          </div>
+     </div>
+
+     </section>
+
+  </section>
+
+
+
+  <!-- hero section end -->
 
 
 
