logho section sess

--- a/index.html
+++ b/index.html
@@ -126,6 +126,29 @@
 
 
 
+  <!-- logho section start -->
+
+
+  <section class="md:grid md:grid-cols-12 px-5 md:px-16 gap-5 items-center">
+    <!-- first -->
+    <div class="md:col-span-4 col-span-12">
+      <p class="dark:text-white">Pave your path to career success by gaining a professional Google certificate with the support of C4U</p>
+    </div>
+    <!-- second -->
+
+    <div class="flex md:col-span-8 col-span-12 justify-center items-center md:justify-start md:ml-10 mt-2 dark:bg-white rounded-md px-5">
+      <img class="w-36 md:w-40" src="./image/Google.png" alt="">
+      <hr>
+      <img class="w-36 h-20" src="./image/Work & Pensions.png" alt="">
+      <hr>
+      <img class="w-36" src="./image/c4u full logo_2022 1.png" alt="">
+    </div>
+  </section>
+
+  <!-- logho section end -->
+
+
+
 
   <script>
    const htmltag = document.getElementById("htmlTag");
