learn section ses

--- a/index.html
+++ b/index.html
@@ -149,6 +149,81 @@
 
 
 
+  <!-- learn section -->
+
+  <!-- learn main section -->
+  <section class="grid grid-cols-12 mt-5 md:mt-20">
+    <!-- learn first -->
+    <section class="col-span-12 md:col-span-6 px-5 md:px-10 shadow-xl pt-5">
+      <h2 class="dark:text-white font-semibold">What you will learn</h2>
+      <hr class="text-[#F9CCC7] mt-2">
+      <div class="mt-5 space-y-7 py-5">
+        <!-- div1 -->
+         <div class="flex items-center gap-3">
+          <img class="w-8" src="./image/Checkmark.png" alt="">
+          <p class="text-sm dark:text-white">Gain skills required to succeed in an entry-level IT job</p>
+         </div>
+         <!-- div2 -->
+        <div class="flex items-center gap-3">
+          <img class="w-8" src="./image/Checkmark.png" alt="">
+          <p class="text-sm dark:text-white">Learn to perform day-to-day IT support tasks including computer assembly, wireless networking, installing programs, and
+          customer service</p>
+        </div>
+
+         <!-- div3 -->
+          <div class="flex items-center gap-3">
+            <img class="w-8" src="./image/Checkmark.png" alt="">
+            <p class="text-sm dark:text-white">Learn how to provide end-to-end customer support, ranging from identifying problems to troubleshooting and debugging</p>
+          </div>
+
+         <!-- div4 -->
+          <div class="flex items-center gap-3">
+            <img class="w-8" src="./image/Checkmark.png" alt="">
+            <p class="text-sm dark:text-white">Learn to use systems including Linux, Domain Name Systems, Command-Line Interface, and Binary Code</p>
+          </div>
+      </div>
+
+    </section>
+
+    <!-- learn second -->
+    <section class="col-span-12 md:col-span-6 md:px-10 mt-10 shadow-xl">
+      <img class="rounded-md mb-2" src="./image/IT_social 1.png" alt="">
+      <h2 class="dark:text-white font-semibold">Skills you will gain</h2>
+      <hr class="text-[#F9CCC7] mt-2">
+
+      <!-- tag section -->
+       <div class=" mt-5 flex flex-wrap px-3 gap-2 items-center">
+        <span class="tag">Debugging</span>
+
+        <!-- two -->
+        <span class="tag">Customer Service</span>
+        <!-- three -->
+        <span class="tag">Customer Support</span>
+        <!-- four -->
+        <span class="tag">Domain Name System (DNS)</span>
+        <!-- five -->
+        <span class="tag">Network Model</span>
+        <!-- six -->
+        <span class="tag">Linux</span>
+        <!-- seven -->
+        <span class="tag">Encryption Algorithms and Techniques</span>
+        <!-- eight -->
+        <span class="tag">Network Protocols</span>
+        <!-- nine -->
+        <span class="tag">Ipv4</span>
+        <!-- ten -->
+        <span class="tag">Troubleshooting</span>
+        <!-- eleven -->
+        <span class="tag">Binary Code</span>
+        <!-- twelve -->
+         <span class="tag">Cloud Computing</span>
+       </div>
+    </section>
+
+  </section>
+
+
+
 
   <script>
    const htmltag = document.getElementById("htmlTag");
