corce section ses

--- a/index.html
+++ b/index.html
@@ -354,6 +354,25 @@
   </section>
 
 
+  <!--  Courses section -->
+
+  <section class="pt-10 relative">
+    <h1 class="dark:text-white text-3xl px-10">There are 5 Courses in this <br> Professional Certificate</h1>
+
+    <div class="px-10 pt-10 gap-2 md:space-x-20 flex flex-wrap mb-5">
+      <span class="border px-3 bg-green-300 rounded-full border-black dark:text-white dark:border-white">Course 1</span>
+      <span class="border px-3 rounded-full border-black dark:border-white dark:text-white">Course 2</span>
+      <span class="border px-3 rounded-full dark:border-white border-black dark:text-white">Course 3</span>
+      <span class="border px-3 rounded-full dark:border-white border-black dark:text-white">Course 4</span>
+      <span class="border px-3 rounded-full dark:border-white border-black dark:text-white">Course 5</span>
+    </div>
+    <div class="px-10">
+      <hr class="dark:text-white ">
+    </div>
+    <img class="absolute w-24 md:right-0 md:w-52  right-0 top-10 md:top-0 " src="./image/Group 238902.png" alt="">
+  </section>
+
+
 
 
   <script>
