--- a/index.html
+++ b/index.html
@@ -373,6 +373,68 @@
   </section>
 
 
+  <!-- about corce section -->
+   <section class="grid grid-cols-12 mt-10 px-5 md:px-10">
+    <!-- about first -->
+    <section class="md:col-span-3 col-span-12 bg-gray-900 p-5 rounded-md">
+      <p class="text-green-400">Course 1</p>
+      <h1 class="text-3xl text-white pt-10">Technical Support Fundamentals</h1>
+      <!-- just habajuba -->
+
+      <div class="flex justify-between mt-10">
+        <p class="text-white text-xs">132,411 ratings</p>
+        <p class="text-yellow-500 text-xs">✳✳✳❇ 4.5</p>
+      </div>
+      <div class="mt-10 flex items-center justify-between">
+        <button class="bg-[#F44335] px-5 p-2 rounded-md">Sign Up</button>
+        <button class="p-2 rounded-md bg-white border border-white px-5">Next</button>
+      </div>
+
+      <p class="text-white text-xs pt-52">When you complete all of the courses in the program, you'll earn a Certificate to share with your professional network
+      as well as unlock access to career support resources to help you kickstart your new career.</p>
+    </section>
+    <!-- right sectionnnn -->
+    <section class="md:col-span-9 col-span-12 px-2 md:px-5">
+      <h1 class="text-[#F9CCC7] text-xl">About this course</h1>
+      <p class="dark:text-white text-sm mt-2 mb-5">This course is the first of a series that aims to prepare you for a role as an entry-level IT Support Specialist. In
+      this course, you’ll be introduced to the world of Information Technology, or IT. You’ll learn about the different facets
+      of Information Technology, like computer hardware, the Internet, computer software, troubleshooting, and customer
+      service. This course covers a wide variety of topics in IT that are designed to give you an overview of what’s to come
+      in this certificate program.</p>
+
+      <h1 class="text-[#F9CCC7] text-xl">What you will learn</h1>
+
+      <div class="flex items-center gap-2 mb-3 mt-5">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand how the binary system works</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Learn how applications are created and how they work under the hood of a computer</p>
+      </div>
+
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Utilize common problem-solving methodologies and soft skills in an Information Technology setting</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Assemble a computer from scratch</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Choose and install an operating system on a computer</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand what the Internet is, how it works, and the impact it has in the modern world</p>
+      </div>
+     
+
+    </section>
+   </section>
+
+
 
 
   <script>
