again start about section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </header>
   <!-- headeer end -->
 
-  <!-- hero section start -->
+  <!--! hero section start -->
 
   <!-- this is a main section -->
   <section class="grid grid-cols-12 py-14 md:py-20 px-5 md:px-10 dark:bg-gray-900 bg-[#FAFAFA]">
@@ -126,7 +126,7 @@
 
 
 
-  <!-- logho section start -->
+  <!--! logho section start -->
 
 
   <section class="md:grid md:grid-cols-12 px-5 md:px-16 gap-5 items-center">
@@ -151,7 +151,7 @@
 
   <!-- learn section -->
 
-  <!-- learn main section -->
+  <!--! learn main section -->
   <section class="grid grid-cols-12 mt-5 md:mt-20">
     <!-- learn first -->
     <section class="col-span-12 md:col-span-6 px-5 md:px-10 shadow-xl pt-5">
@@ -185,7 +185,7 @@
 
     </section>
 
-    <!-- learn second -->
+    <!--! learn second -->
     <section class="col-span-12 md:col-span-6 md:px-10 mt-10 shadow-xl">
       <img class="rounded-md mb-2" src="./image/IT_social 1.png" alt="">
       <h2 class="dark:text-white font-semibold">Skills you will gain</h2>
@@ -223,7 +223,7 @@
   </section>
 
 
-  <!-- jobs section -->
+  <!--! jobs section -->
 
   <section class="grid grid-cols-12 mt-10">
     <!-- first -->
@@ -354,7 +354,7 @@
   </section>
 
 
-  <!--  Courses section -->
+  <!-- ! Courses section -->
 
   <section class="pt-10 relative">
     <h1 class="dark:text-white text-3xl px-10">There are 5 Courses in this <br> Professional Certificate</h1>
@@ -373,8 +373,9 @@
   </section>
 
 
-  <!-- about corce section -->
-   <section class="grid grid-cols-12 mt-10 px-5 md:px-10">
+  <!--  ! about corce section -->
+
+   <section class="grid grid-cols-12 mt-10 px-5 md:px-10 relative shadow-lg">
     <!-- about first -->
     <section class="md:col-span-3 col-span-12 bg-gray-900 p-5 rounded-md">
       <p class="text-green-400">Course 1</p>
@@ -390,7 +391,7 @@
         <button class="p-2 rounded-md bg-white border border-white px-5">Next</button>
       </div>
 
-      <p class="text-white text-xs pt-52">When you complete all of the courses in the program, you'll earn a Certificate to share with your professional network
+      <p class="text-white text-xs pt-40 md:pt-80">When you complete all of the courses in the program, you'll earn a Certificate to share with your professional network
       as well as unlock access to career support resources to help you kickstart your new career.</p>
     </section>
     <!-- right sectionnnn -->
@@ -429,10 +430,293 @@
         <img class="w-7" src="./image/Checkmark.png" alt="">
         <p class="dark:text-white">Understand what the Internet is, how it works, and the impact it has in the modern world</p>
       </div>
+      <h1 class="text-[#F9CCC7] text-xl">Skills you will gain</h1>
+      <div class="mt-5 flex flex-wrap  gap-2 items-center">
+        <span class="tag">Binary Code</span>
+        <span class="tag">Troubleshooting</span>
+        <span class="tag">Customer Support</span>
+        <span class="tag">Linux</span>
+
+      </div>
+
+      <h1 class="text-[#F9CCC7] text-xl mt-5">Information</h1>
+      <ul class="px-5 pt-5 space-y-4 list-disc">
+        <li class="dark:text-white">FFlexible deadlines</li>
+        <li class="dark:text-white">Shareable Certificate</li>
+        <li class="dark:text-white">1 100% online</li>
+        <li class="dark:text-white">Beginner Level</li>
+        <li class="dark:text-white">AApprox. 20 hours to complete</li>
+      </ul>
      
 
     </section>
+    <div class="absolute bottom-[-150px] md:bottom-[-200px] md:ml-24 px-10">
+      <img src="./image/Connector Vector.png" alt="">
+    </div>
    </section>
+   
+
+
+
+   <!-- ! about section 2 -->
+
+  <section class="grid grid-cols-12 mt-10 px-5 md:px-10 pt-28 md:pt-36 relative shadow-lg">
+    <!-- about first -->
+    <section class="md:col-span-3 col-span-12 bg-gray-900 p-5 rounded-md">
+      <p class="text-green-400">Course 2</p>
+      <h1 class="text-3xl text-white pt-10">The Bits and Bytes of Computer Networking
+</h1>
+      <!-- just habajuba -->
+  
+      <div class="flex justify-between mt-10">
+        <p class="text-white text-xs">37,998 ratings</p>
+        <p class="text-yellow-500 text-xs">✳✳✳❇ 4.7</p>
+      </div>
+      <div class="mt-10 flex items-center justify-between">
+        <button class="bg-[#F44335] px-5 p-2 rounded-md">Sign Up</button>
+        <button class="p-2 rounded-md bg-white border border-white px-5">Next</button>
+      </div>
+  
+      <p class="text-white text-xs pt-52">When you complete all of the courses in the program, you'll earn a Certificate
+        to share with your professional network
+        as well as unlock access to career support resources to help you kickstart your new career.</p>
+    </section>
+    <!-- right sectionnnn -->
+    <section class="md:col-span-9 col-span-12 px-2 md:px-5">
+      <h1 class="text-[#F9CCC7] text-xl">About this course</h1>
+      <p class="dark:text-white text-sm mt-2 mb-5 bottom-0">This course is designed to provide a full overview of computer networking. We’ll cover everything from the fundamentals
+      of modern networking technologies and protocols to an overview of the cloud to practical applications and network
+      troubleshooting.
+</p>
+  
+      <h1 class="text-[#F9CCC7] text-xl">What you will learn</h1>
+  
+      <div class="flex items-center gap-2 mb-3 mt-5">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Describe computer networks in terms of a five-layer mode</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand all of the standard protocols involved with TCP/IP communications</p>
+      </div>
+  
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Grasp powerful network troubleshooting tools and techniques</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">learn network services like DNS and DHCP that help make computer networks run</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand cloud computing, everything as a service, and cloud storage</p>
+      </div>
+      
+      <h1 class="text-[#F9CCC7] text-xl">Skills you will gain</h1>
+      <div class="mt-5 flex flex-wrap  gap-2 items-center">
+        <span class="tag">Domain Name System (DNS)</span>
+        <span class="tag">Ipv4</span>
+        <span class="tag">Network Model</span>
+        <span class="tag">Troubleshooting</span>
+  
+      </div>
+  
+      <h1 class="text-[#F9CCC7] text-xl mt-5">Information</h1>
+      <ul class="px-5 pt-5 space-y-4 list-disc">
+        <li class="dark:text-white">FFlexible deadlines</li>
+        <li class="dark:text-white">Shareable Certificate</li>
+        <li class="dark:text-white">1 100% online</li>
+        <li class="dark:text-white">Beginner Level</li>
+        <li class="dark:text-white">AApprox. 20 hours to complete</li>
+      </ul>
+  
+  
+    </section>
+    <div class="absolute bottom-[-150px] md:bottom-[-300px] md:ml-24 px-10">
+      <img src="./image/Connector Vector02.png" alt="">
+    </div>
+  </section>
+
+
+  <!-- ! about section 3 -->
+  <section class="grid grid-cols-12 pt-32 mt-10 md:pt-60 md:mr-20 px-5 md:px-10 relative shadow-lg">
+    <!-- about first -->
+    <section class="md:col-span-3 col-span-12 bg-gray-900 p-5 rounded-md">
+      <p class="text-green-400">Course 3</p>
+      <h1 class="text-3xl text-white pt-10">Operating Systems and You:Becoming a Power User
+</h1>
+      <!-- just habajuba -->
+  
+      <div class="flex justify-between mt-10">
+        <p class="text-white text-xs">22,045 ratings</p>
+        <p class="text-yellow-500 text-xs">✳✳✳❇ 4.7</p>
+      </div>
+      <div class="mt-10 flex items-center justify-between md:justify-between">
+        <button class="bg-[#F44335] px-5 p-2 rounded-md">Sign Up</button>
+        <button class="p-2 rounded-md bg-white border border-white px-5">Next</button>
+      </div>
+  
+      <p class="text-white text-xs pt-40 md:pt-80">When you complete all of the courses in the program, you'll earn a
+        Certificate to share with your professional network
+        as well as unlock access to career support resources to help you kickstart your new career.</p>
+    </section>
+    <!-- right sectionnnn -->
+    <section class="md:col-span-9 col-span-12 px-2 md:px-5">
+      <h1 class="text-[#F9CCC7] text-xl">About this course</h1>
+      <p class="dark:text-white text-sm mt-2 mb-5">In this course -- through a combination of video lectures, demonstrations, and hands-on practice -- you’ll learn about
+      the main components of an operating system and how to perform critical tasks like managing software and users, and
+      configuring hardware.</p>
+  
+      <h1 class="text-[#F9CCC7] text-xl">What you will learn</h1>
+  
+      <div class="flex items-center gap-2 mb-3 mt-5">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Navigate the Windows and Linux filesystems using a graphical user interface and command line interpreter</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Set up users, groups, and permissions for account access</p>
+      </div>
+  
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Install, configure, and remove software on the Windows and Linux operating systems</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Configure disk partitions and filesystems</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Choose and install an operating system on a computer</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand how system processes work and how to manage them</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">work with system logs and remote connection tools</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">work with system logs and remote connection tools</p>
+      </div>
+      <h1 class="text-[#F9CCC7] text-xl">Skills you will gain</h1>
+      <div class="mt-5 flex flex-wrap  gap-2 items-center">
+        <span class="tag">Powershell</span>
+        <span class="tag">Linux File Systems</span>
+        <span class="tag">Command-Line Interface</span>
+        <span class="tag">Linux</span>
+  
+      </div>
+  
+      <h1 class="text-[#F9CCC7] text-xl mt-5">Information</h1>
+      <ul class="px-5 pt-5 space-y-4 list-disc">
+        <li class="dark:text-white">FFlexible deadlines</li>
+        <li class="dark:text-white">Shareable Certificate</li>
+        <li class="dark:text-white">1 100% online</li>
+        <li class="dark:text-white">Beginner Level</li>
+        <li class="dark:text-white">AApprox. 20 hours to complete</li>
+      </ul>
+  
+  
+    </section>
+    <div class="absolute bottom-[-150px] md:bottom-[-200px] md:ml-24 px-10">
+      <img src="./image/Connector Vector.png" alt="">
+    </div>
+  </section>
+
+
+  <!-- ! about section 4 -->
+
+  <section class="grid grid-cols-12 mt-10 px-5 md:px-10 relative shadow-lg">
+    <!-- about first -->
+    <section class="md:col-span-3 col-span-12 bg-gray-900 p-5 rounded-md">
+      <p class="text-green-400">Course 1</p>
+      <h1 class="text-3xl text-white pt-10">Technical Support Fundamentals</h1>
+      <!-- just habajuba -->
+  
+      <div class="flex justify-between mt-10">
+        <p class="text-white text-xs">132,411 ratings</p>
+        <p class="text-yellow-500 text-xs">✳✳✳❇ 4.5</p>
+      </div>
+      <div class="mt-10 flex items-center justify-between">
+        <button class="bg-[#F44335] px-5 p-2 rounded-md">Sign Up</button>
+        <button class="p-2 rounded-md bg-white border border-white px-5">Next</button>
+      </div>
+  
+      <p class="text-white text-xs pt-40 md:pt-80">When you complete all of the courses in the program, you'll earn a
+        Certificate to share with your professional network
+        as well as unlock access to career support resources to help you kickstart your new career.</p>
+    </section>
+    <!-- right sectionnnn -->
+    <section class="md:col-span-9 col-span-12 px-2 md:px-5">
+      <h1 class="text-[#F9CCC7] text-xl">About this course</h1>
+      <p class="dark:text-white text-sm mt-2 mb-5">This course is the first of a series that aims to prepare you for a
+        role as an entry-level IT Support Specialist. In
+        this course, you’ll be introduced to the world of Information Technology, or IT. You’ll learn about the different
+        facets
+        of Information Technology, like computer hardware, the Internet, computer software, troubleshooting, and customer
+        service. This course covers a wide variety of topics in IT that are designed to give you an overview of what’s to
+        come
+        in this certificate program.</p>
+  
+      <h1 class="text-[#F9CCC7] text-xl">What you will learn</h1>
+  
+      <div class="flex items-center gap-2 mb-3 mt-5">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand how the binary system works</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Learn how applications are created and how they work under the hood of a computer</p>
+      </div>
+  
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Utilize common problem-solving methodologies and soft skills in an Information
+          Technology setting</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Assemble a computer from scratch</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Choose and install an operating system on a computer</p>
+      </div>
+      <div class="flex items-center gap-2 mb-3">
+        <img class="w-7" src="./image/Checkmark.png" alt="">
+        <p class="dark:text-white">Understand what the Internet is, how it works, and the impact it has in the modern
+          world</p>
+      </div>
+      <h1 class="text-[#F9CCC7] text-xl">Skills you will gain</h1>
+      <div class="mt-5 flex flex-wrap  gap-2 items-center">
+        <span class="tag">Binary Code</span>
+        <span class="tag">Troubleshooting</span>
+        <span class="tag">Customer Support</span>
+        <span class="tag">Linux</span>
+  
+      </div>
+  
+      <h1 class="text-[#F9CCC7] text-xl mt-5">Information</h1>
+      <ul class="px-5 pt-5 space-y-4 list-disc">
+        <li class="dark:text-white">FFlexible deadlines</li>
+        <li class="dark:text-white">Shareable Certificate</li>
+        <li class="dark:text-white">1 100% online</li>
+        <li class="dark:text-white">Beginner Level</li>
+        <li class="dark:text-white">AApprox. 20 hours to complete</li>
+      </ul>
+  
+  
+    </section>
+    <div class="absolute bottom-[-150px] md:bottom-[-200px] md:ml-24 px-10">
+      <img src="./image/Connector Vector.png" alt="">
+    </div>
+  </section>
+
 
 
 
