aro akta section ses holo

--- a/index.html
+++ b/index.html
@@ -803,6 +803,24 @@
 
 
 
+    <!-- ! and last section start -->
+
+    <section class="pt-10 md:pt-20 mb-20">
+      <div class="relative">
+        <img class="" src="./image/brooke-cagle-g1Kr4Ozfoac-unsplash 2.png" alt="">
+        <div class="absolute bg-white px-10 py-10 top-10 w-[300px] md:w-[450px] left-20 rounded-lg">
+          <img src="./image/comma.png" alt="">
+          <p class="pt-5 text-xl">I worked in retail and needed to make a change. The certificate is really designed for you to go at your own pace. This
+          is something that anybody can do</p>
+          <p class="text-[#F9CCC7] text-sm pt-5">Daniel, IT Support Specialist at Central Community College and Google IT Support Certificate graduate</p>
+        
+        </div>
+      </div>
+
+    </section>
+
+
+
 
 
   <script>
