naw fainal round start

--- a/index.html
+++ b/index.html
@@ -807,8 +807,8 @@
 
     <section class="pt-10 md:pt-20 mb-20">
       <div class="relative">
-        <img class="" src="./image/brooke-cagle-g1Kr4Ozfoac-unsplash 2.png" alt="">
-        <div class="absolute bg-white px-10 py-10 top-10 w-[300px] md:w-[450px] left-20 rounded-lg">
+        <img class="h-96" src="./image/brooke-cagle-g1Kr4Ozfoac-unsplash 2.png" alt="">
+        <div class="absolute bg-white px-3 md:px-10 py-3 md:py-10 top-10 w-[300px] md:w-[450px] left-20 rounded-lg">
           <img src="./image/comma.png" alt="">
           <p class="pt-5 text-xl">I worked in retail and needed to make a change. The certificate is really designed for you to go at your own pace. This
           is something that anybody can do</p>
@@ -819,6 +819,58 @@
 
     </section>
 
+
+    <!-- ! Footer section -->
+
+    <footer class="grid grid-cols-12">
+      <!-- first -->
+      <div class="md:col-span-4 col-span-12 flex justify-center items-center flex-col">
+        <img src="./image/c4u full logo_2022 1.png" class="w-40" alt="">
+        <p class=" pt-5 dark:text-white">Level39 <br>
+        One Canada Square,<br>
+        Canary Wharf,<br>
+        London,<br>
+        E14 5AB</p>
+      </div>
+
+      <!-- first -->
+
+      <div class="md:col-span-2 col-span-12 px-10 md:px-1">
+        <h1 class="dark:text-white text-xl mb-5">Home</h1>
+        <p class="dark:text-white mb-5">Who We Are</p>
+        <p class="dark:text-white mb-5">Mission statement</p>
+        <p class="dark:text-white mb-5">Our Vision</p>
+        <p class="dark:text-white mb-5">The Team</p>
+      </div>
+      <!-- second -->
+       <div class="md:col-span-2 col-span-12 px-10 md:px-1">
+        <h1 class="dark:text-white text-xl mb-5">About Us</h1>
+        <p class="dark:text-white mb-5">Who We Are</p>
+        <p class="dark:text-white mb-5">Mission statement</p>
+        <p class="dark:text-white mb-5">Our Vision</p>
+        <p class="dark:text-white mb-5">The Team</p>
+       </div>
+
+       <!-- third -->
+
+       <div class="md:col-span-2 col-span-12 px-10 md:px-1">
+        <h1 class="dark:text-white text-xl mb-5">Upskill</h1>
+        <p class="dark:text-white mb-5">It Support</p>
+        <p class="dark:text-white mb-5">Project Managment</p>
+        <p class="dark:text-white mb-5">Data Analysts</p>
+        <p class="dark:text-white mb-5">Ux Design</p>
+       </div>
+
+       <!-- four -->
+        <div class="md:col-span-2 col-span-12 px-10 md:px-1">
+          <h1 class="dark:text-white text-xl mb-5">Contact Us</h1>
+          <p class="dark:text-white mb-5">Your message</p>
+          <p class="dark:text-white mb-5">Email</p>
+          <p class="dark:text-white mb-5">Phone number</p>
+          <p class="dark:text-white mb-5">Linkedin</p>
+        </div>
+
+    </footer>
 
 
 
