--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
 
     <footer class="grid grid-cols-12">
       <!-- first -->
-      <div class="md:col-span-4 col-span-12 flex justify-center items-center flex-col">
+      <div class="md:col-span-4 col-span-12 px-10 md:px-1 mb-5 flex md:justify-center md:items-center flex-col">
         <img src="./image/c4u full logo_2022 1.png" class="w-40" alt="">
         <p class=" pt-5 dark:text-white">Level39 <br>
         One Canada Square,<br>
@@ -836,15 +836,15 @@
       <!-- first -->
 
       <div class="md:col-span-2 col-span-12 px-10 md:px-1">
-        <h1 class="dark:text-white text-xl mb-5">Home</h1>
-        <p class="dark:text-white mb-5">Who We Are</p>
-        <p class="dark:text-white mb-5">Mission statement</p>
-        <p class="dark:text-white mb-5">Our Vision</p>
-        <p class="dark:text-white mb-5">The Team</p>
+        <h1 class="dark:text-white text-2xl mb-5">Home</h1>
+        <p class="dark:text-white mb-5">Collaborations</p>
+        <p class="dark:text-white mb-5">Statistics</p>
+        <p class="dark:text-white mb-5">How It Works</p>
+        <p class="dark:text-white mb-5">Testimonials</p>
       </div>
       <!-- second -->
        <div class="md:col-span-2 col-span-12 px-10 md:px-1">
-        <h1 class="dark:text-white text-xl mb-5">About Us</h1>
+        <h1 class="dark:text-white text-2xl mb-5">About Us</h1>
         <p class="dark:text-white mb-5">Who We Are</p>
         <p class="dark:text-white mb-5">Mission statement</p>
         <p class="dark:text-white mb-5">Our Vision</p>
@@ -854,7 +854,7 @@
        <!-- third -->
 
        <div class="md:col-span-2 col-span-12 px-10 md:px-1">
-        <h1 class="dark:text-white text-xl mb-5">Upskill</h1>
+        <h1 class="dark:text-white text-2xl mb-5">Upskill</h1>
         <p class="dark:text-white mb-5">It Support</p>
         <p class="dark:text-white mb-5">Project Managment</p>
         <p class="dark:text-white mb-5">Data Analysts</p>
@@ -863,14 +863,22 @@
 
        <!-- four -->
         <div class="md:col-span-2 col-span-12 px-10 md:px-1">
-          <h1 class="dark:text-white text-xl mb-5">Contact Us</h1>
+          <h1 class="dark:text-white text-2xl mb-5">Contact Us</h1>
           <p class="dark:text-white mb-5">Your message</p>
           <p class="dark:text-white mb-5">Email</p>
           <p class="dark:text-white mb-5">Phone number</p>
           <p class="dark:text-white mb-5">Linkedin</p>
         </div>
 
+        
+
     </footer>
+
+    <div>
+      <hr class="mt-10 dark:text-white">
+      
+      <p class="dark:text-white text-center mt-5 mb-10">Copyright 2022 Creatives For You LTD</p>
+    </div>
 
 
 
